@@ -838,6 +838,28 @@ class Bib(object):
     return int(self.adsurl.find('arXiv') < 0)
 
 
+  def get_authors(self, short=True):
+    """
+    Get string representation for the author list.
+
+    Parameters
+    ----------
+    short: Bool
+       If True, use 'short' format displaying at most the first two
+       authors followed by 'et al.' if corresponds.
+       If False, display the full list of authors.
+    """
+    if len(self.authors) <= 2:
+        return " and ".join([repr_author(author) for author in self.authors])
+
+    if not short:
+        author_list = [repr_author(author) for author in self.authors]
+        authors = "; ".join(author_list[:-1])
+        return authors + "; and " + author_list[-1]
+    else:
+        return repr_author(self.authors[0]) + "; et al."
+
+
 def req_input(prompt, options):
   """
   Query for an aswer to prompt message until the user provides a
